--- a/Predicting_Market_Reactions_to_News/__$$__IRFA_Submission__$$/txt_3_General_Setup.tex
+++ b/Predicting_Market_Reactions_to_News/__$$__IRFA_Submission__$$/txt_3_General_Setup.tex
@@ -19,28 +19,29 @@ Therefore we observe the moment at which $\mathcal{F}^i$ receives the \qquote{tr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection*{Effective treatment day}
-We are interested in examining the impact of each news article $i\in\D$ on the stock price of the firms that are directly affected by it (i.e.: all $j\in\F^i$). 
-%
-Since the publication datetime is not necessarily a trading datetime, we need to impute an \textit{effective treatment date}, which we will denote $\tilde d_0^i$. Such imputation will map the news article publication datetime to the trading date closest to publication where the closing price of the affected stock is affected.
 
-For this purpose, let $\tilde{\mathfrak d}$ denote the set of dates in our sample timeline and let $\tilde{\mathfrak d}\subseteq {\mathfrak d}$ denote the subset of Spanish trading days. Then, we can define a function $\Lambda:\mathfrak d \to \tilde{\mathfrak d}$ that finds the next trading date to a fixed date, i.e: 
-$\Lambda(d) 
-:= 
-\min \{ \tilde{d} \in \tilde{\mathfrak{d}} \mid \tilde{d} > d \}$; 
-. Then, we set $\tilde d_0^i$ to the publication date if the article was published on a trading day before the stock market was closed (which happens at 17:30 in Spain), and we set it equal to the next closest trading day otherwise. Formally,
+%\bblue{
+We are interested in examining the impact of each news article $i\in\D$ on the stock price of the firms directly affected by it (i.e., all $j\in\F^i$). 
+%
+Since publication datetime may not coincide with trading hours, we define an \textit{effective treatment date}, denoted $\tilde d_0^i$. This maps the news article publication datetime to the nearest trading date where the stock price can reflect the news impact.
+
+Let ${\mathfrak d}$ denote the set of all dates in our sample timeline and let $\tilde{\mathfrak d} \subset {\mathfrak d}$ denote the subset of Spanish trading days. We define a function $\Lambda:\mathfrak d \to \tilde{\mathfrak d}$ that finds the next trading date after a given date: 
+$\Lambda(d) := \min \{ \tilde{d} \in \tilde{\mathfrak{d}} \mid \tilde{d} > d \}$. 
+We set $\tilde d_0^i$ to the publication date if the article was published on a trading day before market close (17:30 in Spain), and to the next trading day otherwise. Formally,
 \begin{align*}
 \tilde{d}_0^i :=
 \mycases{llll}{
 d_0^i & \IF & d_0^i \in \tilde{\mathfrak d} ~\wedge~t_0^i < \t{17:30}
 \\
 \Lambda(d_0^i)
-& \IF & d_0^i \not \in \tilde{\mathfrak d} ~\vee~t_0^i \geq  \t{17:30}
+& \IF & d_0^i \not \in \tilde{\mathfrak d} ~\vee~t_0^i \geq \t{17:30}
 }
 .
 \end{align*}
 
-For illustration purposes, we have illustrated the two cases that can arise in \cref{fig:trading-timelines}. 
-
+The two possible cases are illustrated in \cref{fig:trading-timelines}.
+%For clarity, \cref{fig:trading-timelines} depicts the two scenarios that can arise.
+%}
 
 
 %Since the publication datetime is not necessarily a trading datetime, we cannot directly gauge such an effect by looking at $\mathcal Y_0^i$. 
