--- a/Pairs-Trading-a-Sparse-Synthetic-Control/__New__/main.tex
+++ b/Pairs-Trading-a-Sparse-Synthetic-Control/__New__/main.tex
@@ -5,7 +5,17 @@
 \begin{document}
 \begin{center}
 {\Large \textbf{
-Pairs Trading a Sparse Synthetic Replica
+%----------------------------------------------------
+%Reviving the Zombie: 
+%\\[0.44em]
+%Why ``Pairs Trading'' Is Not Dead (Yet)
+%----------------------------------------------------
+%Is Pairs Trading really dead?
+%----------------------------------------------------
+Is Pairs Trading a thing of the past?
+%----------------------------------------------------
+%The Zombie Is Still Alive:
+%Reviving Pairs Trading
 }}
 
 \vspace{3cm}
@@ -49,7 +59,7 @@ Pairs Trading a Sparse Synthetic Replica
 %\input{txt_data.tex}
 
 %%%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
-%\input{txt_methodology.tex}
+\input{txt_methodology.tex}
 
 %%%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
 %\input{txt_conclusion.tex}
