[Updated ordering of the Beamer]

--- a/Pairs-Trading-a-Sparse-Synthetic-Control/__presentation__/Beamer.tex
+++ b/Pairs-Trading-a-Sparse-Synthetic-Control/__presentation__/Beamer.tex
@@ -201,6 +201,31 @@ Asset Pricing can be viewed in \textbf{absolute} and \textbf{relative} terms:
 %\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Literature Review}
+    \begin{itemize}
+        \item \textbf{[Gatev, Goetzmann, \& Rouwenhorst (GGR), 2006]}
+        \begin{itemize}
+            \item Their paper, \textit{``Pairs Trading: Performance of a Relative-Value Arbitrage Rule''} is the most-cited and seminal work in the literature.
+            \smallskip
+            \item First circulated as a working paper in 1999 and later published in the \textit{Review of Financial Studies} (2006).
+            \smallskip
+            \item It provided the \textbf{first large-scale, rigorous empirical evidence of the strategy's historical profitability}, establishing it as a legitimate field of study.
+        \end{itemize}
+        
+        \bigskip % Adds some vertical space between the two main points
+        
+        \item \textbf{\cite{Do2010}}
+        \begin{itemize}
+            \item In their \textit{Financial Analysts Journal} article, they re-examined the GGR strategy with an extended dataset running through 2009.
+            \smallskip
+            \item They confirmed that profitability was steadily \textbf{decaying}, likely due to the strategy's popularity and increasing market efficiency.
+            \smallskip
+            \item However, they also discovered that profits temporarily \textbf{resurged} during periods of market turmoil, such as the 2008 Global Financial Crisis (GFC).
+        \end{itemize}
+    \end{itemize}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{The Decay of Pairs Trading}
 \begin{figure}[H]
   \caption{Monthly excess returns to Pairs Trading }
@@ -246,42 +271,6 @@ Asset Pricing can be viewed in \textbf{absolute} and \textbf{relative} terms:
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\begin{frame}{Literature Review}
-%	\begin{itemize}
-%	\item In 1998, Gatev, Goetzmannet and Rouwenhorst released their wroking paper ``\textit{Pairs trading: Performance of a relative-value arbitrage rule}''. 
-%	\item In 2006, this paper is published in the Review of Financial Studies (2006)
-%	\item This is the most-cited and reference paper in the pairs trading literature
-%	\item In 2010, Do and Faff (2010, \textit{FAJ}) review this paper extending the dataset to 2010 and show that protiability is dcaying, but that it goes up during the GFC
-%\end{itemize}
-%\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Literature Review}
-    \begin{itemize}
-        \item \textbf{The Foundational Study: Gatev, Goetzmann, \& Rouwenhorst [GGR]}
-        \begin{itemize}
-            \item Their paper, \textit{``Pairs Trading: Performance of a Relative-Value Arbitrage Rule''} is the most-cited and seminal work in the literature.
-            \smallskip
-            \item First circulated as a working paper in 1999 and later published in the \textit{Review of Financial Studies} (2006).
-            \smallskip
-            \item It provided the \textbf{first large-scale, rigorous empirical evidence of the strategy's historical profitability}, establishing it as a legitimate field of study.
-        \end{itemize}
-        
-        \bigskip % Adds some vertical space between the two main points
-        
-        \item \textbf{The Profitability Decay:~\cite{Do2010}}
-        \begin{itemize}
-            \item In their \textit{Financial Analysts Journal} article, they re-examined the GGR strategy with an extended dataset running through 2009.
-            \smallskip
-            \item They confirmed that profitability was steadily \textbf{decaying}, likely due to the strategy's popularity and increasing market efficiency.
-            \smallskip
-            \item However, they also discovered that profits temporarily \textbf{resurged} during periods of market turmoil, such as the 2008 Global Financial Crisis (GFC).
-        \end{itemize}
-    \end{itemize}
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Recent Literature on Pairs Trading}
 \begin{itemize}
     \item The pairs trading literature has \textcolor{darkred}{\textbf{stagnated conceptually}} since GGR
@@ -318,6 +307,16 @@ Asset Pricing can be viewed in \textbf{absolute} and \textbf{relative} terms:
 %\begin{frame}{Recent Literature}
 \input{messy_titles.tex}
 \end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\begin{frame}{Literature Review}
+%	\begin{itemize}
+%	\item In 1998, Gatev, Goetzmannet and Rouwenhorst released their wroking paper ``\textit{Pairs trading: Performance of a relative-value arbitrage rule}''. 
+%	\item In 2006, this paper is published in the Review of Financial Studies (2006)
+%	\item This is the most-cited and reference paper in the pairs trading literature
+%	\item In 2010, Do and Faff (2010, \textit{FAJ}) review this paper extending the dataset to 2010 and show that protiability is dcaying, but that it goes up during the GFC
+%\end{itemize}
+%\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\begin{frame}{Recent literature on pairs trading}
